syntax = "proto3";

package proto;

option go_package = "github.com/KartoonYoko/gophkeeper/internal/proto";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    Token token = 1;
    string secret_key = 2;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {}

message RefreshTokenRequest {
    Token token = 1;
}

message RefreshTokenResponse {
    Token token = 1;
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    Token token = 1;
    string secret_key = 2;
}

message Token {
    string access_token = 1;
    string refresh_token = 2;
}


